kubernetes/01-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: my-ingress
spec:
    rules:
    - http:
        paths: 
        - path: /*
          backend:
            serviceName: realworld-frontend
            servicePort: 5000
        - path: /api/*
          backend:
            serviceName: realworld-backend
            servicePort: 3000
